# cimmerian

./: .gitignore  CMakeLists.txt  CimmerianConfig.cmake.in  README.md  compile_commands.json
.claude-plugin/: marketplace.json  plugin.json
docs/: cimmerian_live_app_visual_testing_gap.md  cimmerian_mouse_click_no_hold_gap.md  cimmerian_navigation_without_platform_input_proposal.md  cimmerian_uinput_no_functional_check_gap.md  cimmerian_wayland_xtest_injection_gap.md  next_steps.md  snapshot-testing-spec.md  visual-regression-spec.md
include/cimmerian/: ansi-codes.hpp  ansi-formatter.hpp  ansi-text-builder.hpp  snapshot.hpp  test-assertions.hpp  test-case.hpp  test-debug.hpp  test-entry-point.hpp  test-fail-handler-registry.hpp  test-group.hpp  test-log.hpp  test-macro-helpers.hpp  test-runner.hpp  test.hpp  visual.hpp
include/cimmerian/snapshot/: fnv1a.hpp  hash-snapshot-store.hpp  inline-snapshot-rewriter.hpp  snapshot-key.hpp  snapshot-macros.hpp  snapshot-run-mode.hpp  string-snapshot-store.hpp
include/cimmerian/visual/: i-event-injector.hpp  i-screen-capture.hpp  image-diff.hpp  navigation-driver.hpp  screenshot.hpp  snapshot-store.hpp  ui-event.hpp  visual-test-case.hpp  visual-test-macros.hpp  visual-test-registry.hpp  visual-test-runner.hpp  window-lookup.hpp
include/cimmerian/visual/platform/: auto-linux-event-injector.hpp  linux-uinput-event-injector.hpp  macos-event-injector.hpp  macos-screen-capture.hpp  win32-event-injector.hpp  win32-screen-capture.hpp  x11-event-injector.hpp  x11-screen-capture.hpp  x11-window-lookup.hpp
include/umbra/: ansi-formatter.hpp  i-test-fail-handler.hpp  test-assertions.hpp  test-debug.hpp  test-entry-point.hpp  test-fail-handler-registry.hpp  test-group.hpp  test-log.hpp  test-registry.hpp  test-runner.hpp  test.hpp
skills/cimmerian-testing/: SKILL.md
src/: test-group.cpp  test-registry.cpp  test-runner.cpp
src/snapshot/: hash-snapshot-store.cpp  inline-snapshot-rewriter.cpp  snapshot-key.cpp  snapshot-run-mode.cpp  string-snapshot-store.cpp
src/visual/: active-registries.cpp  image-diff.cpp  navigation-driver.cpp  screenshot.cpp  snapshot-store.cpp  stb-impl.cpp  visual-test-registry.cpp  visual-test-runner.cpp
src/visual/platform/: auto-linux-event-injector.cpp  linux-uinput-event-injector.cpp  macos-event-injector.cpp  macos-screen-capture.cpp  macos-window-lookup.cpp  win32-event-injector.cpp  win32-screen-capture.cpp  win32-window-lookup.cpp  x11-event-injector.cpp  x11-screen-capture.cpp  x11-window-lookup.cpp
test/: example.test.cpp  snapshot.test.cpp  test-main.cpp  visual.test.cpp
test/__snapshots__/: snapshot.test.snap  snapshot.test.snaphash
